[gd_scene load_steps=9 format=3 uid="uid://cg7oglyocv535"]

[ext_resource type="Script" uid="uid://c6ndo2vusjfrc" path="res://ui/ui_mode/scripts/options_manager/options_manager.gd" id="1_gn2n6"]
[ext_resource type="PackedScene" uid="uid://dosa85y0k8h4p" path="res://ui/window/window.tscn" id="1_lfqxq"]
[ext_resource type="Script" uid="uid://dj7c4vq06u00d" path="res://ui/ui_mode/scripts/options_manager/close_button.gd" id="2_6a6fv"]
[ext_resource type="Script" uid="uid://4vkhjfq531ym" path="res://ui/ui_mode/scripts/options_manager/fps_input.gd" id="4_bq4s1"]
[ext_resource type="Script" uid="uid://brwl8n8sv7fcd" path="res://ui/ui_mode/scripts/options_manager/background_input.gd" id="5_r5uvs"]
[ext_resource type="Script" uid="uid://cb2drvfqt310o" path="res://ui/ui_mode/scripts/options_manager/recording_mode_input.gd" id="6_b6x35"]
[ext_resource type="Script" uid="uid://be6ybkp7ji7gm" path="res://ui/ui_mode/scripts/options_manager/recordings_output_dir_input.gd" id="7_oigby"]
[ext_resource type="Script" uid="uid://cxt844hf5yrq" path="res://ui/ui_mode/scripts/options_manager/recordings_output_dir_quick_pick_button.gd" id="8_he8m5"]

[node name="OptionsManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gn2n6")

[node name="Mask" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"mask"

[node name="CenterContainer" type="CenterContainer" parent="Mask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" parent="Mask/CenterContainer" instance=ExtResource("1_lfqxq")]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
dialog = true

[node name="Icon" parent="Mask/CenterContainer/Window/VSplitContainer/TitleBar/Left" index="0"]
visible = false

[node name="Title" parent="Mask/CenterContainer/Window/VSplitContainer/TitleBar/Left" index="1"]
visible = false

[node name="Label" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/TitleBar/Left" index="2"]
layout_mode = 2
text = "编辑选项"

[node name="MinButton" parent="Mask/CenterContainer/Window/VSplitContainer/TitleBar/Right" index="0"]
visible = false

[node name="CloseButton" parent="Mask/CenterContainer/Window/VSplitContainer/TitleBar/Right" index="1"]
script = ExtResource("2_6a6fv")

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 1

[node name="Options" type="VBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Fps" type="VBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Fps"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "帧率"

[node name="Description" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Fps"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的帧率，该值应与您的视频项目保持一致（通常情况下为24fps）"

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Fps"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="FpsInput" type="SpinBox" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Fps/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
min_value = 10.0
max_value = 60.0
value = 24.0
script = ExtResource("4_bq4s1")

[node name="Background" type="VBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Background"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "背景颜色"

[node name="Description" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Background"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的背景颜色，用于在剪辑软件中快速抠图，不建议设置为您在对话中使用的颜色"

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Background"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="BackgroundInput" type="ColorPickerButton" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/Background/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
color = Color(0, 1, 0, 1)
script = ExtResource("5_r5uvs")

[node name="RecordingMode" type="VBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingMode"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "生成模式（录制模式）"

[node name="Description" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingMode"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的行为，合并即将多个对话合并到同一视频，拆分即将多个对话拆分到不同视频中"

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingMode"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="RecordingModeInput" type="OptionButton" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingMode/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "合并"
popup/item_0/id = 0
popup/item_1/text = "拆分"
popup/item_1/id = 1
script = ExtResource("6_b6x35")

[node name="RecordingsOutputDir" type="VBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options"]
layout_mode = 2

[node name="Name" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir"]
layout_mode = 2
theme_type_variation = &"on_background_label"
text = "输出路径"

[node name="Description" type="Label" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir"]
layout_mode = 2
theme_type_variation = &"on_background_label_secondary"
text = "设置生成视频的输出路径"

[node name="MarginContainer" type="MarginContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir/MarginContainer"]
layout_mode = 2

[node name="RecordingsOutputDirInput" type="LineEdit" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 35)
layout_mode = 2
script = ExtResource("7_oigby")

[node name="RecordingsOutputDirQuickPickButton" type="Button" parent="Mask/CenterContainer/Window/VSplitContainer/MarginContainer/WindowContent/MarginContainer/ScrollContainer/MarginContainer/Options/RecordingsOutputDir/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "..."
script = ExtResource("8_he8m5")

[editable path="Mask/CenterContainer/Window"]
